--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,12 +109,27 @@ main > div > div:last-child {
 
 /* ===== Questions ===== */
 
+.answers {
+	text-align: center;
+	display: inline-block;
+	margin-top: 10px;
+	clear: both;
+}
 .answer {
-	display: block;
+	float: left;
 }
 
 label {
-	color: black;
+	text-align: right;
+	float: left;
+	margin: 0 10px;
+	padding-top: 0;
+	font-size: .5em;
+}
+
+.question {
+	clear: both;
+	font-size: .9em;
 }
 
 
