--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,7 @@ main > div > div:last-child {
 */
 .answers {
 	margin-left: 50px;
+	margin-top: 10px;
 }
 label {
 	font-size: .5em;
@@ -141,3 +142,13 @@ input[type=radio]:not(:first-child) {
 	margin-left: 20px;
 }
 
+.message {
+	text-align: center;
+	margin-top: 60px;
+}
+
+.results {
+	text-align: center;
+	margin-top: 10px;
+	font-size: .75em;
+}
